...
				android:indeterminateTint="?android:colorAccent"
				android:indeterminateTintMode="src_in"
				android:visibility="gone"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toBottomOf="@+id/button"/>
		
		<TextView
				android:id="@+id/label"
				style="@style/MyImageDownloadApplicationTheme.TextLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
...
				android:text="@string/log_in"
				android:layout_marginEnd="@dimen/default_margin"/>
		<ImageView
				android:src="@drawable/ic_launcher_foreground"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/imageView"
				android:layout_marginEnd="@dimen/default_margin"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="@dimen/default_margin"
				android:layout_marginBottom="@dimen/default_margin"
				app:layout_constraintBottom_toBottomOf="parent"
...
